fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding-bottom: 3rem;
   margin: 0;
   background-color: #fafafa;
+  overflow: hidden;
 }
 
 .head {
